[gd_scene load_steps=17 format=3 uid="uid://b83h0m3dppul7"]

[ext_resource type="Script" path="res://scripts/track_manager.gd" id="1_5kd6h"]
[ext_resource type="AudioStream" uid="uid://cau26uaplsro7" path="res://sound/bgm/start1.wav" id="2_qt11j"]
[ext_resource type="AudioStream" uid="uid://b5rmbwdq4r5n8" path="res://sound/bgm/continual1.wav" id="3_h4jty"]
[ext_resource type="AudioStream" uid="uid://cim5hdmt1sr6" path="res://sound/bgm/continual2.wav" id="4_q47nr"]
[ext_resource type="AudioStream" uid="uid://c4ivsyi4xu1kk" path="res://sound/bgm/continual3.wav" id="5_c4pid"]
[ext_resource type="AudioStream" uid="uid://b4pplmtsp4s1h" path="res://sound/bgm/continual4.wav" id="6_ol41i"]
[ext_resource type="AudioStream" uid="uid://dv5f5x8qw35mx" path="res://sound/bgm/continual5.wav" id="7_kdbtv"]
[ext_resource type="AudioStream" uid="uid://dvegmvxwwbxit" path="res://sound/bgm/switcher.wav" id="8_8s3oc"]
[ext_resource type="AudioStream" uid="uid://bkruey27e5srg" path="res://sound/bgm/change_1.wav" id="9_jdscd"]
[ext_resource type="AudioStream" uid="uid://bf1wdn83fh8pc" path="res://sound/bgm/change_1_continue.wav" id="10_e3dn5"]
[ext_resource type="AudioStream" uid="uid://cm2s0ei4yqtwd" path="res://sound/bgm/change_1_more_1.wav" id="11_hfqh6"]
[ext_resource type="AudioStream" uid="uid://dmni2bfd3u50" path="res://sound/bgm/change_1_more_2.wav" id="12_j4yn4"]
[ext_resource type="AudioStream" uid="uid://d3vkwk27l5ey4" path="res://sound/bgm/change_2.wav" id="13_eib4m"]
[ext_resource type="AudioStream" uid="uid://bc8wxqh2a3d2s" path="res://sound/bgm/change_2_continue_1.wav" id="14_5jslq"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hm8i1"]
playback_mode = 1
streams_count = 5
stream_0/stream = ExtResource("3_h4jty")
stream_1/stream = ExtResource("4_q47nr")
stream_2/stream = ExtResource("5_c4pid")
stream_3/stream = ExtResource("6_ol41i")
stream_4/stream = ExtResource("7_kdbtv")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l10q5"]
streams_count = 3
stream_0/stream = ExtResource("10_e3dn5")
stream_1/stream = ExtResource("11_hfqh6")
stream_2/stream = ExtResource("12_j4yn4")

[node name="track_manager" type="Node"]
script = ExtResource("1_5kd6h")

[node name="start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qt11j")
volume_db = -27.0

[node name="continual" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_hm8i1")
volume_db = -27.0

[node name="switcher" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8s3oc")
volume_db = -27.0

[node name="change1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jdscd")
volume_db = -27.0

[node name="change1_continual" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_l10q5")
volume_db = -27.0

[node name="change2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_eib4m")
volume_db = -27.0

[node name="change2_continue" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_5jslq")
volume_db = -27.0

[connection signal="finished" from="start" to="." method="_on_start_finished"]
[connection signal="finished" from="continual" to="." method="_on_continual_finished"]
[connection signal="finished" from="switcher" to="." method="_on_switcher_finished"]
[connection signal="finished" from="change1" to="." method="_on_change_1_finished"]
[connection signal="finished" from="change1_continual" to="." method="_on_change_1_continual_finished"]
[connection signal="finished" from="change2" to="." method="_on_change_2_finished"]
[connection signal="finished" from="change2_continue" to="." method="_on_change_2_continue_finished"]
